--- a/src/main/resources/templates/INFORMES/ficha_baja.html
+++ b/src/main/resources/templates/INFORMES/ficha_baja.html
@@ -18,97 +18,87 @@
    <!-- Bootstrap Core Css -->
    
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-<style type="text/css">
-    body {
-        font-size: 10px;
-        line-height: 1;
-    }
+    <style type="text/css">
+        body {
+            font-size: 11.5px;
+            line-height: 1.1;
+        }
+    
+        h6 {
+            margin-top: 0px;
+        }
+    
+        #nota {
+            margin-top: 0px;
+        }
+    
+        #tabla1 {
+            margin-bottom: 5px;
+            margin-top: 20px;
+        }
+    
+        #tabla2 {
+            margin-bottom: 5px;
+            
+        }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    h7 {
-        line-height: 0;
-    }
-
-    h6 {
-        margin-top: 10px;
-    }
-
-    #nota {
-        margin-top: 0px;
-    }
-
-    #tabla1 {
-        margin-bottom: 5px;
-        margin-top: 20px;
-    }
-
-    #tabla2 {
-        margin-bottom: 5px;
-    }
-
-    #tabla3 {
-        margin-bottom: 0px;
-    }
-
-    #tabla4 {
-        margin-top: 5px;
-        margin-bottom: 0px;
-    }
-
-    #tabla5 {
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-
-    /* Establecer el tamaño de la hoja a carta (8.5x11 pulgadas) */
-    @page {
-        size: 8.5in 11in;
-        margin: 0.1in;
-        /* Márgenes de 0.5 pulgadas en cada lado */
-    }
-
+        #tabla3 {
+            margin-bottom: 0px;
+        }
+    
+        /* Establecer el tamaño de la hoja a carta (8.5x11 pulgadas) */
+        @page {
+            size: 8.5in 11in;
+            margin: 0.1in;
+            /* Márgenes de 0.1 pulgada en cada lado y 0.5 pulgadas en la parte inferior */
+            margin-bottom: 0.1in;
+            margin-top: 0.1in;
+        }
+        
+    
         header {
-        position: fixed;
-        top: 0.1in; /* Ajusta la posición vertical según tus necesidades */
-        left: 0.1in; /* Ajusta la posición horizontal según tus necesidades */
-        width: 100%;
-        text-align: center;
-    }
-
-    header img {
-        width: 800px;
-        height: 115px;
-    }
-
-    section {
-    position: absolute;
-    top: 100px; /* Ajusta la posición vertical según el tamaño de tu encabezado */
-    left: 0.1in; /* Ajusta la posición horizontal según tus necesidades */
-    width: 100%;
-    text-align: center;
-}
-
-    footer {
-    position: fixed;
-    bottom: 0.1in; /* Ajusta la posición vertical según tus necesidades */
-    left: 0.1in; /* Ajusta la posición horizontal según tus necesidades */
-    width: 100%;
-    text-align: center;
-}
-
-    footer img {
-        width: 800px;
-        height: 100px;
-    }
-</style>
+            position: static;
+            top: 0.1in;
+            /* Ajusta la posición vertical según tus necesidades */
+            left: 0.1in;
+            /* Ajusta la posición horizontal según tus necesidades */
+            right: 5in;
+            width: 95%;
+            text-align: center;
+        }
+    
+        header img {
+            width: 800px;
+            height: 115px;
+        }
+    
+        section {
+            position: sticky;
+            top: 100px;
+            /* Ajusta la posición vertical según el tamaño de tu encabezado */
+            left: 0.2in;
+            /* Ajusta la posición horizontal según tus necesidades */
+            width: 98%;
+            text-align: center;
+        }
+    
+        footer {
+            position: fixed;
+            bottom: 0in; /* Ajusta la posición vertical según tus necesidades */
+            left: 0.1in; /* Ajusta la posición horizontal según tus necesidades */
+            width: 95%;
+            text-align: center; /* Forzar un salto de página después del footer */
+        }
+    
+        footer img {
+            width: 800px;
+            height: 100px;
+        }
+        
+        
+        </style>
     <body>
         <script>
-            
                 // Llama a la función comprobarAncho cuando se carga la página y cuando se cambia el tamaño de la ventana.
                 window.onload = function () {
                     window.print();
@@ -125,7 +115,7 @@
                         <tbody>
                             <tr>
                                 <th colspan="2">
-                                    <H6>INFORME</H6><br><span style="font-weight: bold; float: right; font-size: small;"><b
+                                    <H6>INFORME</H6><span style="font-weight: bold; float: right; font-size: small;"><b
                                             th:text="${'INF.D.H.S.-USIC-N°'+baja.id_baja+'/'+#dates.format(baja.fecha_baja, 'yyyy')}"></b></span>
                                 </th>
                             </tr>
@@ -148,10 +138,12 @@
                             </tr>
                             <tr>
                                 <th scope="row" width="10%"></th>
-                                <th scope="row" width="95%" class="text-md-start" th:text="${'REF.'+baja.ref_baja}"></th>
+                                <th scope="row" width="95%" class="text-md-start" style="text-transform:uppercase" th:text="${'REF.'+baja.ref_baja}"></th>
                             </tr>
                             <tr>
-                                <td colspan="2" style="text-align: justify;" th:utext="${'Tengo a bien dirigirme a su persona para saludarlo /a cordialmente y a la vez hacerle llegar el Informe Técnico del Equipo solicitado en CITE:<b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
+                                <td colspan="2" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() == 1}"  th:utext="${'Tengo a bien dirigirme a su persona para saludarlo /a cordialmente y a la vez hacerle llegar el Informe Técnico del Equipo solicitado en CITE:<b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
+                                </td>
+                                <td colspan="2" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() > 1}"  th:utext="${'Tengo a bien dirigirme a su persona para saludarlo /a cordialmente y a la vez hacerle llegar el Informe Técnico del Los Equipos solicitado en CITE:<b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
                                 </td>
                             </tr>
                             <tr>
@@ -161,31 +153,66 @@
                             </tr>
                         </tbody>
                     </table>
+                    
                     <table class="table table-bordered border-dark" id="tabla2">
                         <tbody>
                             
-                            <tr>
+                            <tr >
                                 <th>N°</th>
                                 <th>CODIGO UAP</th>
                                 <th>CARACTERÍSTICAS DEL BIEN</th>
                                 <th>ESTADO DEL BIEN</th>
                                 <th>OBSERVACIONES</th>
                             </tr>
+                            <tr th:each="bd, cont : ${baja.detalleBajas}" style="page-break-inside: avoid;">
+                                <td th:text="${cont.count}">N°</td>
+                                <td th:text="${bd.almacen.cod_equipo}">CODIGO UAP</td>
+                                <td th:text="${bd.almacen.descripcion}">CARACTERÍSTICAS DEL BIEN</td>
+                                <td style="text-align: start;" >
+                                    <div class="col">
+                                        <th:block th:each="dab : ${bd.detalleAlmacenFallaBajas}">                             
+                                            <li class="col-12" style="text-transform: uppercase;" th:text="${dab.fallaBaja.nom_fallaBaja}">   
+                                            </li>                            
+                                        </th:block>
+                                    </div>
+                                </td>
+                                <td th:text="${baja.observacion_baja}">OBSERVACIONES</td>
+                            </tr>
+                           
+                        </tbody>
+                    </table>
+
+                    <table class="table table-bordered border-white" id="tabla3">
+                        <tbody>
+                            
                             <tr>
-                                <td>N°</td>
-                                <td>CODIGO UAP</td>
-                                <td>CARACTERÍSTICAS DEL BIEN</td>
-                                <td>ESTADO DEL BIEN</td>
-                                <td>OBSERVACIONES</td>
+                                <th class="text-start" colspan="2">
+                                    II. RECOMENDACIÓN
+                                </th>
+                            </tr>
+                            <tr>
+                                <td th:text="${baja.recomendacion_baja}" style="text-transform: uppercase; text-align: justify;">
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-transform: uppercase; text-align: justify;">
+                                    EN CUANTO PUEDO INFORMAR PARA FINES CONSIGUIENTES.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: justify;">
+                                    Cc/archivos DHS
+                                </td>
                             </tr>
                            
                         </tbody>
                     </table>
             </section>
                      
-            <footer>
+            <!-- <footer>
                 <img src="../../../../images/PiedePagina.webp" alt="Footer Image">
-            </footer>
+            </footer> -->
         </div>
         
                        
