--- a/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
+++ b/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
@@ -69,7 +69,7 @@
                                         </tr>
                                     </thead>
 
-                                    <tbody>
+                                    <tbody style="text-transform:uppercase">
                                         <tr th:each="b, num : ${bajas}" th:if="${b.estado_baja != 'X'}">
                                             <td
                                                 th:text="${num.count}">
@@ -87,20 +87,20 @@
                                             <td th:text="${b.observacion_baja}"></td>
 
                                             <td>
-                                                <!-- <a th:href="${'../../../../hardware-servicio/eliminar-persona/'+ b.id_baja}"
+                                                <a th:href="${'../../../../hardware-servicio/eliminar_ficha_tecnica_baja/'+ b.id_baja}"
                                                     class="btn bg-red btn-circle waves-effect waves-circle waves-float"
                                                     data-toggle="tooltip" data-placement="top" title="Eliminar">
                                                     <i class="material-icons">delete</i>
                                                 </a>
-                                                <a th:href="${'../../../../hardware-servicio/editar-persona/'+ b.id_baja}"
+                                                <a th:href="${'../../../../hardware-servicio/editar_ficha_tecnica_baja/'+ b.id_baja}"
                                                     type="button"
                                                     class="btn bg-light-blue btn-circle waves-effect waves-circle waves-float"
                                                     data-toggle="tooltip" data-placement="top" title="Editar">
                                                     <i class="material-icons">create</i>
-                                                </a> -->
+                                                </a>
                                                 <a th:href="${'../../../../hardware-servicio/ficha_tecnica_baja/' + b.id_baja}"
                                                     target="_blank" type="button"
-                                                    class="btn bg-red btn-circle waves-effect waves-circle waves-float"
+                                                    class="btn bg-green btn-circle waves-effect waves-circle waves-float"
                                                     data-toggle="tooltip" data-placement="top" title="Imprimir Informe">
                                                     <i class="material-icons">print</i>
                                                 </a>
