--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -37,7 +37,7 @@
         </thead>
         <tbody>
           <tr th:each="a, cont : ${activos_selec}" th:if="${a.estado != 'X'}">
-
+  
             <td th:text="${cont.count}"></td>
             <td>
               <a type="button" class="btn bg-red btn-block btn-lg waves-effect" disable>
@@ -50,15 +50,16 @@
             <td>
               <div class="demo-checkbox">
                 <th:block th:each="fe : ${a.tipoEquipo.fallaEquipoBajas}" th:if="${fe.estado_fallaEquipoBaja != 'X'}">
-                  <input th:name="${'id_fallaBaja_'+a.id_almacen}" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox" th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red" />
+                  <input th:name="${'id_fallaBaja_'+a.id_almacen}" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox"
+                    th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red" />
                   <label th:text="${fe.fallaBaja.nom_fallaBaja}"
                     th:for="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}">RED</label>
                 </th:block>
               </div>
             </td>
-            
+  
           </tr>
-
+  
         </tbody>
       </table>
     </div>
