--- a/src/main/resources/templates/ficha_tecnica.html
+++ b/src/main/resources/templates/ficha_tecnica.html
@@ -320,7 +320,7 @@
                                             
                                         </td>
                                         <td width="70%" class="text-end">
-                                            <img src="../../../../images/USIC3.png"  width="150" height="40">
+                                            <img src="../../../../images/logo.webp"  width="150" height="40">
                                         </td>
                                     </tr>
                                 </tbody>
