--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -329,7 +329,7 @@
                                 </h2>
                             </div>
                             <div class="body">
-                                <div th:replace="layaut/layaut :: alert"></div>
+                                <!-- <div th:replace="layaut/layaut :: alert"></div> -->
                                 <div class="table-responsive">
                                     <br>
                                     <table class="table table-bordered table-striped table-hover dataTable js-exportable" id="miTabla3">
