--- a/src/main/resources/templates/layaut/layaut.html
+++ b/src/main/resources/templates/layaut/layaut.html
@@ -153,7 +153,7 @@
                 </li> -->
                 <li th:if="${session.persona != null}" >
                     <a href="javascript:void(0);" class="menu-toggle">
-                        <i class="material-icons">home</i>
+                        <i class="material-icons">archive</i>
                         <span>INFORMES</span>
                     </a>
                     <ul class="ml-menu">
